# taiwan-stock-screener

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.js  config.yaml  firebase.json  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: ci.yml  pages.yml  screener.yml
dashboard/: app.py
data/: history.json  results.json  sector_history.json  signal_backtest.json
docs/: DOMAIN_KNOWLEDGE.md  V4_MICROSTRUCTURE_STRATEGIES.md  WORKLOG.md
firebase/: firestore.indexes.json  firestore.rules
frontend/: app.js  index.html  styles.css
frontend/data/: chip_history.csv  history.json  results.json  sector_history.json  signal_backtest.json
scripts/: analyze_signal_outcomes.py  run_screener.py
taiwan_stock_screener/: __init__.py  config.py  logging_config.py
taiwan_stock_screener/api/: main.py  schemas.py
taiwan_stock_screener/backtest/: __init__.py  engine.py
taiwan_stock_screener/catalysts/: __init__.py  events.py
taiwan_stock_screener/collectors/: __init__.py  base.py  broker_flow.py  finmind.py  fred.py  http.py  market_chip.py  microstructure.py  mops.py  sample.py  tpex.py  twse.py
taiwan_stock_screener/database/: models.py  repository.py  session.py
taiwan_stock_screener/indicators/: technical.py
tests/: test_api.py  test_broker_flow.py  test_catalyst_sector.py  test_chip_templates.py  test_indicators.py  test_left_side.py  test_market_chip.py  test_microstructure.py  test_quote_freshness.py  test_scoring.py  test_screener_metrics.py  test_signal_outcomes.py  test_technical_templates.py
(+13 files in other folders)
